[gd_scene load_steps=5 format=3 uid="uid://db8pilp0y4e3f"]

[ext_resource type="Texture2D" uid="uid://dypdntx4ffbwo" path="res://Resource/ZOMbie.png" id="1"]
[ext_resource type="Script" path="res://Enemies/Enemy.gd" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 24.0

[sub_resource type="OccluderPolygon2D" id="2"]
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="Enemy" type="PathFollow2D"]
loop = false
script = ExtResource("2")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource("1")

[node name="AttackTimer" type="Timer" parent="."]

[node name="FunctionTimers" type="Node" parent="."]

[node name="StopTimer" type="Timer" parent="FunctionTimers"]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("2")

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="FunctionTimers/StopTimer" to="." method="_on_StopTimer_timeout"]
